--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,65 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.dropDown-menu{
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 268px;
+  margin-top: 10px;
+  box-shadow: 0 30px 70px 0 rgba(41, 41, 43, 0.1)
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.dropdown-item{
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+li {
+  list-style: none;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.navbar-items{
+  font-size: 16px;
+  color: #5e709d;
+  font-weight: 400;
+  letter-spacing: 0.2px;
+  vertical-align: baseline;
+  font-family: inherit;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.navbar-items:hover{
+  color: #26256c;
+}
+.navbar{
+  margin-top: 20px !important ;
+  justify-content: center !important;
+}
+.navbar-container{
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.navbar-nav{
+  display: flex !important;
+  justify-content: space-between !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.navBar-collapse{
+  width: 70%;
+ }
+
+.footer{
+  position:absolute;
+  bottom:0;
+  height: 100px;
+  left: 0;
+  right: 0;
+  background-color: black;
+  color: #fff;
+  display: flex;
+  justify-content: center;
 }
+
+
+
+
