--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,10 +11,23 @@
 .dropdown-item{
   margin-top: 15px;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: start !important;
+  align-items: center;
+ 
+}
+
+.dropdown-title{
+ 
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 li {
   list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 .navbar-items{
@@ -24,6 +37,10 @@ li {
   letter-spacing: 0.2px;
   vertical-align: baseline;
   font-family: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
 }
 
 .navbar-items:hover{
@@ -34,32 +51,264 @@ li {
   justify-content: center !important;
 }
 .navbar-container{
-  width: 60%;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .navbar-nav{
   display: flex !important;
   justify-content: space-between !important;
+  align-items: center !important;
+  flex-direction: row !important;
+}
+
+.navbar-brand{
+  display: flex !important;
+  align-items: flex-start;
+  width: 20%;
 }
 
 .navBar-collapse{
-  width: 70%;
+  width: 80%;
+  display: flex !important;
+  flex-wrap: nowrap !important;
+  align-items: center !important;
  }
-
+.navbar-items-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 12px;
+  width: 80%;
+}
 .footer{
-  position:absolute;
   bottom:0;
-  height: 100px;
   left: 0;
   right: 0;
-  background-color: black;
+  background-color: #181236;
   color: #fff;
   display: flex;
   justify-content: center;
 }
 
+.main-btn{
+  background-color: #05f2f2!important;
+  padding: 0 20px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 16px;
+  border-radius: 30px;
+}
+
+.marginRight{
+  margin-right: 10px !important;
+}
+
+.navbar-items-container > a {
+  position: relative !important;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) !important;
+}
+
+.navbar-items-container > a:after {
+  content: "" !important;
+  position: absolute !important;
+  width: 0% !important;
+  height: 1px !important;
+  display: block !important;
+  transition: all 0.3s ease !important;
+  bottom: 10%;
+  left: 0%;
+
+}
+.navbar-items-container > a:hover::after {
+  width: 100% !important;
+  height: 2px !important;
+  background-color: #05f2f2!important;
+}
+
+.footer-link > a{
+  position: relative !important;
+  transition: all ease 0.3s !important;
+  padding-bottom: 2px !important;
+  
+}
+
+.footer-link > a::after {
+
+  content: "" !important;
+  position: absolute !important;
+  width: 0% !important;
+  height: 1px !important;
+  display: block !important;
+  transition: all 0.3s ease !important;
+  bottom: 0%;
+  left: 0%;
+}
+
+.footer-link > a:hover::after{
+  width: 100% !important;
+  height: 2px !important;
+  background-color: #05f2f2!important;
+}
+
+.animated-button{
+  position: relative !important;
+  transition: .2s transform ease-in-out !important
+}
+.copyright-text{
+  color: #aeaeae;
+  text-align: center;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.copyright{
+  background-color: #121332;
+  border-top: 1px solid #232649;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0%;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.section{
+  background-color: red;
+}
+.widget-title{
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-size: 16px !important;
+  margin: 18px 0 36px !important;
+  color: #fff !important;
+  font-weight: 400 !important;
+  line-height: 1.235 !important;
+}
+
+.widget-item-font{
+  color: #8998c2 !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  text-transform: none !important;
+  font-style: normal !important;
+  font-size: 16px !important;
+  font-weight: 500 !important;
+}
+
+.mobile-nav-container{
+  position: fixed;
+  display: flex;
+  justify-content: end;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  bottom: 0%;
+}
+
+.mobile-nav-item-container{
+  position: fixed;
+  width: 300px;
+  height: 100%;
+  left: 0%;
+  background-color: #24243b;
+  z-index: 9999;
+  bottom: 0%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  
 
 
+}
+.mobile-nav-header{
+  padding: 40px !important;
+}
+.close-btn{
+  position: fixed;
+  z-index: 9999;
+  right: 0;
+  color: #fff;
+  font-size: 30px;
+  margin: 10px;
+}
+.mobile-nav-content{
 
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+   
+}
+
+.mobile-nav-item-font{
+  color: white !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  text-transform: none !important;
+  font-style: normal !important;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 50px;
+}
+.mobile-nav-item,.mobile-nav-header{
+  
+  padding: 5px 40px 5px 40px;
+  border-bottom: #abb8c3 solid 1PX;
+}
+
+.container-fluid{
+  padding: 0% !important;
+}
+
+.site-padding{
+  padding-right: 20%;
+  padding-left: 20%;
+}
+@media only screen and (max-width: 1000px) {
+  .navbar-container{
+    width: 100%;
+  }
+  .dropDown-menu{
+    position: static;
+    width: 100%;
+    margin: 0%;    
+    padding-left: 0% !important;
+  }
+  .dropDown-menu > li:not(:last-child){
+    border-bottom:   #37374d solid 1PX;
+  }
+  .dropdown{
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: start !important;
+    cursor: pointer;
+
+  }
+  .dropdown-item-border > li:not(:last-child){
+    border-bottom: #abb8c3 solid 1px;
+
+  }
+
+
+  .dropDown-menu{
+    background-color: #28283f;
+  }
+  .dropdown-toggle{
+    padding: 5px 40px 5px 40px;
+  }
+
+  .site-padding{
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .dropdown-item{
+    padding: 0px 40px 0px 40px;
+    color: #cfcfd4;
+  }
+  .dropdown-item:hover{
+    color: #94949f;
+  }
+
+}
