--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,6 +100,9 @@ li {
   line-height: 35px;
   font-size: 16px;
   border-radius: 30px;
+  font-family: "Raleway", Sans-serif !important;
+  font-weight: 500 !important;
+  
 }
 
 .marginRight{
@@ -357,6 +360,50 @@ li {
   top: 32.5%;
   left: 69.5% 
 }
+
+.card-title{
+  color: #181236;
+  margin-bottom: 13px;
+  line-height: 44px;
+  font-family: "Raleway", Sans-serif;
+  font-size: 42px;
+  font-weight: 700
+}
+
+.card-content{
+  color: #3C4043;
+  font-family: "Raleway", Sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 24px;
+  margin-bottom: 70px;
+  font-size: 18px;
+}
+.siteHeader{
+  background-color: #181236 ;
+  height: 600px;
+  background-image: url("/Silhouette-Home.png");
+  background-repeat: no-repeat;
+}
+
+.silhouette-home{
+  position: absolute;
+  height: 600px;
+  width: 1396px;
+  left: 10%;
+}
+.silhouette-title{
+  position: absolute;
+  top: 20%;
+  left: 40%;
+}
+
+.backgroundColor{
+  background-color: #181236 ;
+}
+ .icon{
+  margin-right: 10px !important;
+ }
 
 
 @media only screen and (max-width: 1000px) {
