--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-.dropDown-menu{
+.dropDown-menu {
   background-color: #fff;
   position: absolute;
   left: 0;
@@ -8,29 +8,29 @@
   box-shadow: 0 30px 70px 0 rgba(41, 41, 43, 0.1)
 }
 
-.dropdown-item{
+.dropdown-item {
   margin-top: 15px;
   margin-bottom: 15px;
   display: flex;
   justify-content: start !important;
   align-items: center;
- 
+
 }
 
-.dropdown-title{
- 
+.dropdown-title {
+
   display: flex;
   justify-content: start;
   align-items: center;
 }
 
-li {
+/* li {
   list-style: none;
   display: flex;
   justify-content: center;
-}
+} */
 
-.navbar-items{
+.navbar-items {
   font-size: 16px;
   color: #5e709d;
   font-weight: 400;
@@ -40,17 +40,19 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
- 
+
 }
 
-.navbar-items:hover{
+.navbar-items:hover {
   color: #26256c;
 }
-.navbar{
-  margin-top: 20px !important ;
+
+.navbar {
+  margin-top: 20px !important;
   justify-content: center !important;
 }
-.navbar-container{
+
+.navbar-container {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -58,33 +60,35 @@ li {
   width: 100%;
 }
 
-.navbar-nav{
+.navbar-nav {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
   flex-direction: row !important;
 }
 
-.navbar-brand{
+.navbar-brand {
   display: flex !important;
   align-items: flex-start;
   width: 20%;
 }
 
-.navBar-collapse{
+.navBar-collapse {
   display: flex !important;
   flex-wrap: nowrap !important;
   align-items: center !important;
- }
-.navbar-items-container{
+}
+
+.navbar-items-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: nowrap;
   gap: 30px;
 }
-.footer{
-  bottom:0 !important;
+
+.footer {
+  bottom: 0 !important;
   left: 0 !important;
   right: 0 !important;
   background-color: #181236 !important;
@@ -93,8 +97,8 @@ li {
   justify-content: center !important;
 }
 
-.main-btn{
-  background-color: #05f2f2!important;
+.main-btn {
+  background-color: #05f2f2 !important;
   padding: 0 20px;
   height: 35px;
   line-height: 35px;
@@ -102,19 +106,19 @@ li {
   border-radius: 30px;
   font-family: "Raleway", Sans-serif !important;
   font-weight: 500 !important;
-  
+
 }
 
-.marginRight{
+.marginRight {
   margin-right: 10px !important;
 }
 
-.navbar-items-container > a {
+.navbar-items-container>a {
   position: relative !important;
   transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) !important;
 }
 
-.navbar-items-container > a:after {
+.navbar-items-container>a:after {
   content: "" !important;
   position: absolute !important;
   width: 0% !important;
@@ -125,20 +129,21 @@ li {
   left: 0%;
 
 }
-.navbar-items-container > a:hover::after {
+
+.navbar-items-container>a:hover::after {
   width: 100% !important;
   height: 2px !important;
-  background-color: #05f2f2!important;
+  background-color: #05f2f2 !important;
 }
 
-.footer-link > a{
+.footer-link>a {
   position: relative !important;
   transition: all ease 0.3s !important;
   padding-bottom: 2px !important;
-  
+
 }
 
-.footer-link > a::after {
+.footer-link>a::after {
 
   content: "" !important;
   position: absolute !important;
@@ -150,24 +155,25 @@ li {
   left: 0%;
 }
 
-.footer-link > a:hover::after{
+.footer-link>a:hover::after {
   width: 100% !important;
   height: 2px !important;
-  background-color: #05f2f2!important;
+  background-color: #05f2f2 !important;
 }
 
-.animated-button{
+.animated-button {
   position: relative !important;
   transition: .2s transform ease-in-out !important
 }
-.copyright-text{
+
+.copyright-text {
   color: #aeaeae;
   text-align: center;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.copyright{
+.copyright {
   background-color: #121332;
   border-top: 1px solid #232649;
   display: flex;
@@ -180,7 +186,7 @@ li {
 }
 
 
-.widget-title{
+.widget-title {
   font-family: Arial, Helvetica, sans-serif !important;
   font-size: 16px !important;
   margin: 18px 0 36px !important;
@@ -189,7 +195,7 @@ li {
   line-height: 1.235 !important;
 }
 
-.widget-item-font{
+.widget-item-font {
   color: #8998c2 !important;
   font-family: Arial, Helvetica, sans-serif !important;
   text-transform: none !important;
@@ -198,7 +204,7 @@ li {
   font-weight: 500 !important;
 }
 
-.mobile-nav-container{
+.mobile-nav-container {
   position: fixed;
   display: flex;
   justify-content: end;
@@ -210,7 +216,7 @@ li {
   bottom: 0%;
 }
 
-.mobile-nav-item-container{
+.mobile-nav-item-container {
   position: fixed;
   width: 300px;
   height: 100%;
@@ -221,14 +227,16 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  
+
 
 
 }
-.mobile-nav-header{
+
+.mobile-nav-header {
   padding: 40px !important;
 }
-.close-btn{
+
+.close-btn {
   position: fixed;
   z-index: 9999;
   right: 0;
@@ -236,15 +244,16 @@ li {
   font-size: 30px;
   margin: 10px;
 }
-.mobile-nav-content{
 
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-   
+.mobile-nav-content {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+
 }
 
-.mobile-nav-item-font{
+.mobile-nav-item-font {
   color: white !important;
   font-family: Arial, Helvetica, sans-serif !important;
   text-transform: none !important;
@@ -253,23 +262,24 @@ li {
   font-weight: 500;
   line-height: 50px;
 }
-.mobile-nav-item,.mobile-nav-header{
-  
+
+.mobile-nav-item,
+.mobile-nav-header {
+
   padding: 5px 40px 5px 40px;
   border-bottom: #abb8c3 solid 1PX;
 }
 
-.container-fluid{
+.container-fluid {
   padding: 0% !important;
 }
 
-.site-padding{
+.site-padding {
   padding-right: 20% !important;
   padding-left: 20% !important;
 }
 
-.highlight-spot
-{
+.highlight-spot {
   position: absolute;
   width: 24px;
   height: 24px;
@@ -277,18 +287,18 @@ li {
   border: 3px solid #fff;
   cursor: pointer;
   background-color: #05f2f2;
-    
+
 }
-.highlight-spot:hover
-{
-    cursor: pointer;
+
+.highlight-spot:hover {
+  cursor: pointer;
 }
-.highlight-spot:after
-{
+
+.highlight-spot:after {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1,1);
+  transform: translate(-50%, -50%) scale(1, 1);
   pointer-events: none;
   content: "";
   display: block;
@@ -300,68 +310,73 @@ li {
   animation: icon-pulse 2s linear infinite;
 }
 
-.hotspot-image{
+.hotspot-image {
   width: 100%;
   height: auto;
 }
 
 @keyframes icon-pulse {
-  
-  0%{
-    transform: translate(-50%, -50%) scale(1,1);
+
+  0% {
+    transform: translate(-50%, -50%) scale(1, 1);
     opacity: 0;
   }
 
-  20%{
-    transform: translate(-50%, -50%) scale(1.5,1.5);
+  20% {
+    transform: translate(-50%, -50%) scale(1.5, 1.5);
     opacity: 0.9;
   }
 
-  50%{
-    transform: translate(-50%, -50%) scale(2,2);
+  50% {
+    transform: translate(-50%, -50%) scale(2, 2);
     opacity: 0;
   }
-  100%{
-    transform: translate(-50%, -50%) scale(2,2);
+
+  100% {
+    transform: translate(-50%, -50%) scale(2, 2);
     opacity: 0;
   }
 }
 
-.center-y{
+.center-y {
   transform: translateY(-50%);
 }
-.center-x{
+
+.center-x {
   margin: 50 auto;
 }
 
-.sectors{
+.sectors {
   top: 40%;
   left: 28%
 }
-.businesses{
-  top: 59%;
-  left: 27.2% 
 
+.businesses {
+  top: 59%;
+  left: 27.2%
 }
-.data{
+
+.data {
   top: 73%;
   left: 29.5%
 }
-.technology{
+
+.technology {
   top: 87%;
-  left: 31.6% 
+  left: 31.6%
 }
 
-.data-center{
+.data-center {
   top: 50%;
   left: 47.4%
 }
-.data-end{
+
+.data-end {
   top: 32.5%;
-  left: 69.5% 
+  left: 69.5%
 }
 
-.card-title{
+.card-title {
   color: #181236;
   margin-bottom: 13px;
   line-height: 44px;
@@ -370,7 +385,7 @@ li {
   font-weight: 700
 }
 
-.card-content{
+.card-content {
   color: #3C4043;
   font-family: "Raleway", Sans-serif;
   font-weight: 500;
@@ -378,208 +393,271 @@ li {
   line-height: 24px;
   margin-bottom: 70px;
   font-size: 18px;
+
 }
-.siteHeader{
-  background-color: #181236 ;
+
+.siteHeader {
+  background-color: #181236;
   height: 600px;
   background-image: url("/Silhouette-Home.png");
   background-repeat: no-repeat;
 }
 
-.silhouette-home{
+.silhouette-home {
   position: absolute;
   height: 600px;
   width: 1396px;
   left: 10%;
 }
-.silhouette-title{
+
+.silhouette-title {
   position: absolute;
   top: 20%;
   left: 40%;
 }
 
-.backgroundColor{
-  background-color: #181236 ;
+.backgroundColor {
+  background-color: #181236;
 }
- .icon{
-  margin-right: 10px !important;
- }
 
+.icon {
+  margin-right: 10px !important;
+}
+
+@media only screen and (max-width: 1280px) {
+  .content-image {
+    top: 142% !important;
+    left: 45% !important;
+
+  }
+}
 
 @media only screen and (max-width: 1000px) {
 
-  .highlight-spot{
+  .highlight-spot {
     width: 18px;
     height: 18px;
   }
 
-.sectors{
-  top: 40%;
-  left: 14.5%
-}
-.businesses{
-  top: 59%;
-  left: 13% 
+  .sectors {
+    top: 40%;
+    left: 14.5%
+  }
 
-}
-.data{
-  top: 73%;
-  left: 16.5%
-}
-.technology{
-  top: 87%;
-  left: 19.9% 
-}
+  .businesses {
+    top: 59%;
+    left: 13%
+  }
 
-.data-center{
-  top: 50%;
-  left: 45.5%
-}
-.data-end{
-  top: 32.5%;
-  left: 81.5% 
-}
-  .navbar-container{
+  .data {
+    top: 73%;
+    left: 16.5%
+  }
+
+  .technology {
+    top: 87%;
+    left: 19.9%
+  }
+
+  .data-center {
+    top: 50%;
+    left: 45.5%
+  }
+
+  .data-end {
+    top: 32.5%;
+    left: 81.5%
+  }
+
+  .navbar-container {
     width: 100%;
   }
-  .dropDown-menu{
+
+  .dropDown-menu {
     position: static;
     width: 100%;
-    margin: 0%;    
+    margin: 0%;
     padding-left: 0% !important;
   }
-  .dropDown-menu > li:not(:last-child){
-    border-bottom:   #37374d solid 1PX;
+
+  .dropDown-menu>li:not(:last-child) {
+    border-bottom: #37374d solid 1PX;
   }
-  .dropdown{
+
+  .dropdown {
     display: flex !important;
     flex-direction: column !important;
     justify-content: start !important;
     cursor: pointer;
 
   }
-  .dropdown-item-border > li:not(:last-child){
+
+  .dropdown-item-border>li:not(:last-child) {
     border-bottom: #abb8c3 solid 1px;
 
   }
 
 
-  .dropDown-menu{
+  .dropDown-menu {
     background-color: #28283f;
   }
-  .dropdown-toggle{
+
+  .dropdown-toggle {
     padding: 5px 40px 5px 40px;
   }
 
-  .site-padding{
+  .site-padding {
     padding-right: 10px !important;
     padding-left: 10px !important;
   }
-  .dropdown-item{
+
+  .dropdown-item {
     padding: 0px 40px 0px 40px;
     color: #cfcfd4;
   }
-  .dropdown-item:hover{
+
+  .dropdown-item:hover {
     color: #94949f;
   }
 
 }
-.HeaderPage{ 
-  background-color: white; 
+
+.HeaderPage {
+  background-color: white;
   padding-left: 10px;
 }
 
-.contentPage{ 
-  background-color: white; 
+.contentPage {
+  background-color: white;
   padding-left: 10px;
+  margin-top: 150px !important;
 }
 
-.gridstyle{
+.gridstyle {
   background-color: #28283f;
 }
+
 .left-border {
   border-left: 0.4rem solid #1EEDE2;
   padding-left: 18px;
+}
+
+
+
+ul.bullet-before li {
+  font-family: "Raleway", Sans-serif !important;
+  font-weight: 300 !important;
+  /* content: "\2022";
+  color: black;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em; */
+}
+
+
+.flech {
+  height: 42rem;
+}
+
+
+.btn-footer {
+  margin: auto;
+  text-align: center;
+  width: fit-content;
+}
+
+.footerPageOurorigin {
+  padding: 50px;
+  color: white;
+  background-color: #181236;
+  padding-left: 10px;
+}
+
+.container {
+  display: flex;
+  overflow: auto;
+  position: relative;
+}
+
+.image-container {
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.content-container {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+
+.item {
+  display: flex;
+  padding: 50px;
+  margin: 10px;
+}
+
+.meta {
+  margin-right: 5px;
+  position: sticky;
+  top: 10px;
+  align-self: flex-start;
+}
+
+.sub-item-container {
+  background-color: yellow;
+  display: flex;
+  flex-flow: wrap;
+}
+
+.sub-item {
+  background-color: blue;
+  height: 200px;
+  width: 150px;
+  margin: 5px;
+}
+
+.image {
+  height: 100%;
+  width: 300px;
+}
+
+.content-image {
+  position: absolute;
+  top: 80%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  width: 15px;
+  z-index: 10;
+}
+
+@media only screen and (max-width: 1000px) {
+  .content-image {
+    background-color: red;
+    display: none !important;
+
   }
+}
 
-  
-  
-    ul.bullet-before  li::before {
-      content: "\2022";
-      color: black;
-      font-weight: bold;
-      display: inline-block; 
-      width: 1em;
-      margin-left: -1em;
-    }
-  
+@media only screen and (max-width: 600px) {
+  .button-width {
+    width: 75% !important;
+  }
+}
 
-    .flech{ 
-      height: 42rem;
-    }
-    
-    
-    .btn-footer {
-      margin: auto; 
-      text-align: center;
-      width: fit-content;
-    }
+.button-width {
+  margin: 0 auto;
+  height: auto !important;
+  padding: 10px;
+  width: 25%;
+}
 
-    .footerPageOurorigin{ 
-      padding: 50px;
-      color:white;
-      background-color: #181236; 
-      padding-left: 10px;
-    }
-
-    .container {
-      display: flex;
-      overflow: auto;
-      position: relative;
-    }
-    
-    .image-container {
-      position: fixed;
-      left: 0;
-      top: 0;
-    }
-    
-    .content-container {
-      position: absolute;
-      right: 0;
-      top: 0;
-      bottom: 0;
-    }
-  
-
-    .item {
-      display: flex; 
-      padding: 50px;
-      margin: 10px;
-    }
-    
-    .meta {
-      margin-right: 5px;
-      position: sticky;
-      top: 10px;
-      align-self: flex-start;
-    }
-    
-    .sub-item-container {
-      background-color: yellow;
-      display: flex;
-      flex-flow: wrap;
-    }
-    
-    .sub-item {
-      background-color: blue;
-      height: 200px;
-      width: 150px;
-      margin: 5px;
-    }
-    
-    .image{ 
-      height: 100%;
-      width: 300px; 
-    }
-    
+.text-content {
+  font-size: 13px;
+  font-family: "Raleway", Sans-serif !important;
+  font-weight: 500 !important;
+  padding-left: 1.9rem !important;
+}
