--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
   left: 0;
   top: 100%;
   width: 268px;
-  margin-top: 10px;
+  margin-top: 0px;
   box-shadow: 0 30px 70px 0 rgba(41, 41, 43, 0.1)
 }
 
@@ -70,7 +70,7 @@
 .navbar-brand {
   display: flex !important;
   align-items: flex-start;
-  width: 20%;
+  
 }
 
 .navBar-collapse {
@@ -432,9 +432,292 @@
   }
 }
 
+ .carousel-text{
+  position: absolute !important;
+  top: 15% !important;
+  right: 40%;
+ }
+
+ .carousel-image{
+
+  position: absolute;
+  top: 15%;
+  left: 0%;
+  height: 85%
+ }
+
+ .carousel-item {
+  height: 500px !important;
+ }
+ .carousel {
+  z-index: -1;
+  padding-right: 20% !important;
+  padding-left: 20% !important;
+
+ }
+
+ .handBackground{
+  background-image: url('/hands.png');
+  background-repeat: no-repeat;
+  background-position: center;
+ }
+ 
+ .bulleBackground{
+  background-image: url('/Bulle-Home.png');
+  background-repeat: no-repeat;
+  background-position: center;
+ }
+
+ .img{
+  position: relative ;
+  width: 400px;
+  height: 400px;
+ }
+
+ .main-image{
+
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+ }
+
+ .img:hover .main-image {
+  opacity: 0.3;
+}
+
+.img:hover .image-middle {
+  opacity: 1;
+}
+
+.image-middle{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  color: #181236;
+}
+.height-l{
+  height: 800px !important;
+}
+
+.btn-absolute{
+      position: absolute !important;
+      right: 30%;
+      bottom: 45%;
+}
+
+.card-absolute {
+
+  position: absolute;
+  top: 15%;
+  left:0%;
+}
+
+.imagine-image{
+  width: 100% !important;
+  height: auto !important;
+  left: 0;
+  right: 0;
+  bottom: 10%
+}
+
+.talent-image{
+  width: 100%;
+  height: auto;
+}
+
+.bulle-image{
+  width: 20%;
+  height: auto;
+  position: absolute;
+  bottom: 25%;
+  left: 60%;
+  
+}
+
+.contact-us-home{
+  position: relative;
+  height: 600px;
+}
+
+.contact-us-home-card{
+  height: auto;
+  position: absolute;
+  bottom: 50%;
+  left: 25%;
+}
+
+.contact-us-section-btn{
+  position: absolute !important;
+  bottom: 45%;
+  left: 30%;
+}
+
+.hands-home{
+  width: 65%;
+  height: auto;
+}
+ @media only screen and (max-width: 600px) {
+
+  .contact-us-home{
+    height: 500px !important;
+  }
+  .contact-us-home-card{
+
+    top: 0% !important;
+    left: 10% !important;
+  }
+  .contact-us-section-btn{
+    bottom: 5%;
+    left: 30%;
+  }
+  .bulle-image{
+    width: 60% !important;
+    height: auto;
+    position: absolute;
+    bottom: 20% !important;
+    left: 20% !important;
+    
+  }
+  .carousel-image{
+    left: -50% !important;
+    
+  }
+  .carousel-item {
+    height: 391px !important;
+  }
+  .carousel-text{
+
+    top: 20% !important;
+    right: 20%;
+   }
+   .carousel{
+    padding-right: 0% !important;
+    padding-left: 0% !important;
+   }
+   .card-absolute {
+
+    position: absolute;
+    top: 20%;
+    left:0%;
+  }
+  
+  .talent-image{
+    width: 80%;
+    height: auto;
+  }
+
+
+.btn-absolute{
+  position: absolute !important;
+  right: 25%;
+  bottom: 10%;
+}
+.height-l{
+  height: 450px !important;
+}
+.imagine-image{
+
+  bottom: 25%;
+}
+
+.site-padding{
+  padding-right: 5px !important;
+  padding-left: 5px !important;
+}
+
+
+
+.bulle-image{
+  width: 60%;
+  height: auto;
+  position: absolute;
+  bottom: 5%;
+  left: 25%;
+  
+}
+
+.contact-us-home{
+  position: relative;
+  height: 600px;
+}
+
+.contact-us-home-card{
+  height: auto;
+  position: absolute;
+  left: 0%;
+}
+
+ }
+
+ @media only screen and (max-width: 900px) and (min-width: 600px){
+
+
+  .contact-us-home{
+    position: relative;
+    height: 400px;
+  }
+
+  .contact-us-home-card{
+
+    top: 15% !important;
+    left: 5% !important;
+  }
+  .contact-us-section-btn{
+    bottom: 50%;
+    left: 20%;
+  }
+  .bulle-image{
+    width: 30% !important;
+    height: auto;
+    position: absolute;
+    bottom: 30% !important;
+    left: 60% !important;
+    
+  }
+
+
+.btn-absolute{
+  position: absolute !important;
+  right: 20%;
+  bottom: 40%;
+}
+.height-l{
+  height: 500px !important;
+}
+
+
+  .carousel-text{
+
+    top: 20% !important;
+    right: 30%;
+   }
+   .carousel-image{
+    left: 0% !important;
+    
+  }
+
+  .carousel-item {
+    height: 391px !important;
+  }
+  .carousel{
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+   }
+
+
+ }
+
 @media only screen and (max-width: 1000px) {
 
-  .highlight-spot {
+  .highlight-spot{
     width: 18px;
     height: 18px;
   }
@@ -471,6 +754,7 @@
 
   .navbar-container {
     width: 100%;
+   
   }
 
   .dropDown-menu {
@@ -654,7 +938,7 @@ ul.bullet-before li {
   padding: 10px;
   width: 25%;
 }
-
+ 
 .text-content {
   font-size: 13px;
   font-family: "Raleway", Sans-serif !important;
