--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,16 @@
 }
 
 .dropdown-item {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  display: flex;
+  
+  display: flex !important;
   justify-content: start !important;
-  align-items: center;
-
+  align-items: center !important;
+  color: #5e709d !important;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
+
 
 .dropdown-title {
 
@@ -24,11 +27,11 @@
   align-items: center;
 }
 
-/* li {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-} */
+ .menu-li {
+  list-style: none !important;
+  display: flex !important;
+  justify-content: center !important;
+} 
 
 .navbar-items {
   font-size: 16px;
@@ -608,8 +611,6 @@
     padding-left: 0% !important;
    }
    .card-absolute {
-
-    position: absolute;
     top: 20%;
     left:0%;
   }
@@ -792,7 +793,7 @@
   }
 
   .dropdown-toggle {
-    padding: 5px 40px 5px 40px;
+    padding: 5px 40px 5px 40px !important;
   }
 
   .site-padding {
@@ -801,8 +802,11 @@
   }
 
   .dropdown-item {
-    padding: 0px 40px 0px 40px;
-    color: #cfcfd4;
+    padding: 0px 40px 0px 40px !important;
+    color: #cfcfd4 !important;
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
+
   }
 
   .dropdown-item:hover {
@@ -1071,4 +1075,14 @@ width:50%;
   background-color: white;
   color: black;
   border-top: 10px solid #1EEDE2;
+}
+
+@media all and (min-width: 992px) {
+	.navbar .nav-item .dropdown-menu{ display: none; }
+	.navbar .nav-item:hover .nav-link{   }
+	.navbar .nav-item:hover .dropdown-menu{ display: block; }
+	.navbar .nav-item .dropdown-menu{ margin-top:40px; }
+  .dropdown-menu{
+    width: 200px;
+  }
 }
