--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -439,6 +439,17 @@
 }
 
 @media only screen and (max-width: 1280px) {
+  .sliderstyle{
+ 
+    padding-top: 8rem!important;
+  }
+  .Silhouette-image{
+    
+    position: absolute !important;
+    left: 10% !important;
+    bottom: 0 !important ;
+    width: 69% !important;
+  }
   .content-image {
     top: 142% !important;
     left: 45% !important;
@@ -587,6 +598,68 @@
 }
 
 @media only screen and (max-width: 600px) {
+  
+  .buttonSlider{ 
+    z-index: 9; 
+    font-family: Raleway;
+    color: rgb(24, 18, 54);
+    text-decoration: none;
+    white-space: normal;
+    width: 117px !important;
+    height: 34px !important; 
+    line-height: 31px!important; 
+    letter-spacing: 0px !important;
+    font-weight: 500 !important;
+    font-size: 13px !important;
+    padding-left: 11px;
+    border-radius: 22px;
+    padding-right: 11px;
+    backdrop-filter: none; 
+
+    margin-top:10%   !important ;
+    
+   
+   
+  }
+  .footprint {
+    padding-left: 10%!important; 
+    padding-bottom: 10rem;
+    padding-top: 13% !important;
+}
+  .slidertitle>div>h1 {
+    font-family: "Raleway", Sans-serif !important;
+    font-weight: 700 !important;
+    font-size: 30px !important;
+    color:  white;
+    margin-bottom: 0 !important;
+   
+  }
+
+  .slidercontent>div>span {
+    text-align: left !important;
+    line-height: 22px !important;
+    letter-spacing: 0px !important; 
+    font-size: 21px !important;
+    font-family: "Raleway", Sans-serif !important; 
+    color:  white; 
+    text-decoration: none;
+    white-space: normal; 
+    transform-origin: 50% 50%;
+    opacity: 1;
+    transform: translate(0px, 0px);
+    visibility: visible;
+    font-weight: 500 !important;
+  }
+  .sliderstyle{
+ 
+    padding-top: 1rem!important;
+  }
+  .Silhouette-image {
+    position: absolute !important;
+    left: -46% !important;
+    bottom: 0!important;
+    width: 122% !important;
+}
   .sectionourvalues {
     background-color: white !important;
 
@@ -695,6 +768,19 @@
 @media only screen and (max-width: 900px) and (min-width: 600px) {
   .text-ourdna {}
 
+
+  .contact-us-home-card {
+    height: auto;
+    position: absolute;
+    left: 0%;
+  }
+
+}
+
+@media only screen and (max-width: 900px) and (min-width: 600px) {
+  
+  .text-ourdna {}
+
   .contact-us-home {
     position: relative;
     height: 400px;
@@ -792,6 +878,10 @@
     left: 81.5%
   }
 
+  .navbar-container {
+    width: 100%;
+
+  }
 
   .dropDown-menu {
     position: static;
@@ -845,12 +935,7 @@
   }
 
 }
-
-.HeaderPage {
-  background-color: white;
-  padding-left: 10px;
-}
-
+ 
 .contentPage {
   background-color: white;
   padding-left: 10px;
@@ -1120,10 +1205,12 @@ ul.bullet-before li {
 }
 
 .headercontetn {
-  font-size: 19px;
   font-family: "Raleway", Sans-serif !important;
   font-weight: 800 !important;
   line-height: 1.2;
+  padding: 0px 0px 0px 0px;
+  font-size: 20px;
+  
 
 }
 
@@ -1139,6 +1226,7 @@ ul.bullet-before li {
   background-color: white;
   color: black;
   border-top: 10px solid #1EEDE2;
+  height:100%;
 }
 
 @media all and (min-width: 992px) {
@@ -1153,6 +1241,23 @@ ul.bullet-before li {
   left: 0;
   box-shadow: 0 30px 70px 0 rgba(41, 41, 43, 0.1)
 }
+  .navbar .nav-item .dropdown-menu {
+    display: none;
+  }
+
+  .navbar .nav-item:hover .nav-link {}
+
+  .navbar .nav-item:hover .dropdown-menu {
+    display: block;
+  }
+
+  .navbar .nav-item .dropdown-menu {
+    margin-top: 40px;
+  }
+
+  .dropdown-menu {
+    width: 200px;
+  }
 }
 
 .textstyle>div>h1 {
@@ -1177,4 +1282,79 @@ ul.bullet-before li {
   width: 1170px;
   margin: 0 auto;
   max-width: 90%;
+
+}
+.content-ourvalues {
+  width: 20%;
+  margin: 10px;
+  padding-right: 1.25rem!important;
+  padding-left: 1.25rem!important;
+  
+}
+.slidertitle>div>h1 {
+  font-family: "Raleway", Sans-serif ;
+  font-weight: 500  ;
+  font-size: 50px  ;
+  color:  white;
+ 
+}
+
+.slidercontent>div>span {
+  font-family: "Raleway", Sans-serif  ;
+  font-weight: 500  ;
+  font-size: 30px  ;
+  color:  white;
+  font-weight: bold;
+
+ 
+  text-decoration: none;
+  white-space: normal;
+
+  text-align: justify;
+  line-height: 39px;
+  letter-spacing: 1px;
+
+  transform-origin: 50% 50%;
+  opacity: 1;
+  transform: translate(0px, 0px);
+  visibility: visible;
+}
+.Silhouette-image{
+  position: absolute;
+  left: 18%  ;
+  bottom: 0 ;
+  width: 53%;
+}
+ 
+ 
+.slider-container{
+ 
+ 
+}
+.sliderstyle{
+  position:relative;
+  padding-top: 10rem ;
+}
+.buttonSlider{ 
+  margin:0 auto  ;
+  display: block !important;  
+  width: 45%;
+  height: auto;
+  line-height: 58px;
+  font-size: 17px;
+  border-radius: 22px;
+ 
+  border-width: 0px;
+}
+ 
+
+.slidercontent  {
+  font-family: "Raleway", Sans-serif !important;
+  margin-bottom: 1.5rem!important;
+  
+}
+
+.footprint   {
+padding-bottom:10rem;
+  
 }
